<resources>
    <string name="app_name">EnjoyCroatia</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="favorite">Favorite</string>


    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome to Croatia!</string>
    <string name="password">Password</string>
    <string name="register_question">Do you want to make account?</string>
    <string name="register">Register</string>
    <string name="nickname">Nickname</string>
    <string name="register_here">Register here!</string>
    <string name="actually_i_have_account">Actually I don\'t want to!</string>
    <string name="back_to_login">Take me back</string>
    <string name="close">Close</string>
    <string name="last_visited">Last visited:</string>
    <string name="not_visited">Not visited </string>
    <string name="you_are_logged_in_with">You are logged in with:</string>
    <string name="you_have">You have</string>
    <string name="favorites">favorites</string>
    <string name="your_nickname_is">Your nickname is</string>
    <string name="logout">Logout</string>
    <string name="favorite_destinations">favorite destinations</string>
    <string name="yes">Yes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>